@@ -82,14 +82,14 @@ public class AutoInsertTest {
         department.setLocation(new Location<Department>("foo"));
         int result = dao.insert(department);
         assertEquals(1, result);
-        assertEquals(new Integer(1), department.getVersion());
+        assertEquals(Integer.valueOf(1), department.getVersion());
 
-        department = dao.selectById(new Integer(99));
-        assertEquals(new Integer(99), department.getDepartmentId().getValue());
-        assertEquals(new Integer(99), department.getDepartmentNo());
+        department = dao.selectById(Integer.valueOf(99));
+        assertEquals(Integer.valueOf(99), department.getDepartmentId().getValue());
+        assertEquals(Integer.valueOf(99), department.getDepartmentNo());
         assertEquals("hoge", department.getDepartmentName());
         assertEquals("foo", department.getLocation().getValue());
-        assertEquals(new Integer(1), department.getVersion());
+        assertEquals(Integer.valueOf(1), department.getVersion());
     }
 
     @Test
@@ -100,15 +100,15 @@ public class AutoInsertTest {
         Result<Dept> result = dao.insert(dept);
         assertEquals(1, result.getCount());
         dept = result.getEntity();
-        assertEquals(new Integer(1), dept.getVersion());
+        assertEquals(Integer.valueOf(1), dept.getVersion());
         assertEquals("hoge_preI_postI", dept.getDepartmentName());
 
-        dept = dao.selectById(new Integer(99));
-        assertEquals(new Integer(99), dept.getDepartmentId().getValue());
-        assertEquals(new Integer(99), dept.getDepartmentNo());
+        dept = dao.selectById(Integer.valueOf(99));
+        assertEquals(Integer.valueOf(99), dept.getDepartmentId().getValue());
+        assertEquals(Integer.valueOf(99), dept.getDepartmentNo());
         assertEquals("hoge_preI", dept.getDepartmentName());
         assertEquals("foo", dept.getLocation().getValue());
-        assertEquals(new Integer(1), dept.getVersion());
+        assertEquals(Integer.valueOf(1), dept.getVersion());
     }
 
     @Test
@@ -120,7 +120,7 @@ public class AutoInsertTest {
         department.setDepartmentName("hoge");
         int result = dao.insert(department);
         assertEquals(1, result);
-        assertEquals(new Integer(1), department.getVersion());
+        assertEquals(Integer.valueOf(1), department.getVersion());
         try {
             dao.insert(department);
             fail();
@@ -137,14 +137,14 @@ public class AutoInsertTest {
         department.setDepartmentName("hoge");
         int result = dao.insert_excludeNull(department);
         assertEquals(1, result);
-        assertEquals(new Integer(1), department.getVersion());
+        assertEquals(Integer.valueOf(1), department.getVersion());
 
-        department = dao.selectById(new Integer(99));
-        assertEquals(new Integer(99), department.getDepartmentId().getValue());
-        assertEquals(new Integer(99), department.getDepartmentNo());
+        department = dao.selectById(Integer.valueOf(99));
+        assertEquals(Integer.valueOf(99), department.getDepartmentId().getValue());
+        assertEquals(Integer.valueOf(99), department.getDepartmentNo());
         assertEquals("hoge", department.getDepartmentName());
         assertEquals("TOKYO", department.getLocation().getValue());
-        assertEquals(new Integer(1), department.getVersion());
+        assertEquals(Integer.valueOf(1), department.getVersion());
     }
 
     @Test
@@ -157,15 +157,15 @@ public class AutoInsertTest {
         department.setDepartmentName("hoge");
         int result = dao.insert(department);
         assertEquals(1, result);
-        assertEquals(new Integer(1), department.getVersion());
+        assertEquals(Integer.valueOf(1), department.getVersion());
 
         department = dao.selectById(99, 99);
-        assertEquals(new Integer(99), department.getDepartmentId1());
-        assertEquals(new Integer(99), department.getDepartmentId2());
-        assertEquals(new Integer(99), department.getDepartmentNo());
+        assertEquals(Integer.valueOf(99), department.getDepartmentId1());
+        assertEquals(Integer.valueOf(99), department.getDepartmentId2());
+        assertEquals(Integer.valueOf(99), department.getDepartmentNo());
         assertEquals("hoge", department.getDepartmentName());
         assertNull(department.getLocation());
-        assertEquals(new Integer(1), department.getVersion());
+        assertEquals(Integer.valueOf(1), department.getVersion());
     }
 
     @Test
@@ -234,11 +234,11 @@ public class AutoInsertTest {
         worker.employeeNo = Optional.of(9999);
         int result = dao.insert(worker);
         assertEquals(1, result);
-        assertEquals(new Integer(1), worker.version.get());
+        assertEquals(Integer.valueOf(1), worker.version.get());
 
         worker = dao.selectById(Optional.of(9999));
-        assertEquals(new Integer(9999), worker.employeeNo.get());
-        assertEquals(new Integer(1), worker.version.get());
+        assertEquals(Integer.valueOf(9999), worker.employeeNo.get());
+        assertEquals(Integer.valueOf(1), worker.version.get());
         assertFalse(worker.employeeName.isPresent());
         assertFalse(worker.salary.isPresent());
         assertFalse(worker.hiredate.isPresent());
@@ -317,11 +317,11 @@ public class AutoInsertTest {
         {
             Branch branch = dao.selectById(99);
             assertNotNull(branch);
-            assertEquals(new Integer(99), branch.branchId);
-            assertEquals(new Integer(1), branch.version);
+            assertEquals(Integer.valueOf(99), branch.branchId);
+            assertEquals(Integer.valueOf(1), branch.version);
             BranchDetail branchDetail = branch.branchDetail;
             assertNotNull(branchDetail);
-            assertEquals(new Integer(99), branchDetail.branchNo);
+            assertEquals(Integer.valueOf(99), branchDetail.branchNo);
             assertEquals("hoge", branchDetail.branchName);
             org.seasar.doma.it.dao.BranchDao.Location location = branchDetail.location;
             assertNotNull(location);
